# symgraph

./: .gitignore  .scip  Cargo.toml  LSIF_USAGE.md  README.md  demo_lsif_usage.py  test_rust.db  unified_gui_settings.json
.continue/: config.json
crates/symgraph-cli/: Cargo.toml
crates/symgraph-cli/src/: main.rs  main_old.rs
crates/symgraph-cli/src/modules/: cxx_analyzer.rs  mod.rs  rust_analyzer.rs  utils.rs
crates/symgraph-cli/src/modules/commands/: cli.rs
crates/symgraph-cli/src/modules/static/: graph.html  index.html
crates/symgraph-cli/tests/: integration.rs
crates/symgraph-core/: Cargo.toml
crates/symgraph-core/src/: annotations.rs  database.rs  lib.rs  schema.sql  scip.rs
crates/symgraph-cxx/: Cargo.toml
crates/symgraph-cxx/src/: lib.rs  modules.rs
crates/symgraph-discovery/: Cargo.toml
crates/symgraph-discovery/src/: generate.rs  lib.rs  scip.rs
crates/symgraph-models/: Cargo.toml  README.md
crates/symgraph-models/src/: lib.rs
crates/symgraph-rust/: Cargo.toml
crates/symgraph-rust/src/: lib.rs
crates/symgraph-scripts/: Cargo.toml
crates/symgraph-scripts/src/: lib.rs  project.rs
examples/: hello_example.rs  how_to_use.txt
examples/cpp20_modules/: CMakeLists.txt  foo.cppm  main.cpp
gui/: README.md  run_gui.py  unified_gui_settings.json  unified_symgraph_gui.py
gui/symgraph_viewer/: README.md  SETUP.md  pubspec.yaml
gui/symgraph_viewer/lib/: main.dart
gui/symgraph_viewer/lib/models/: edge.dart  symbol.dart
gui/symgraph_viewer/lib/services/: database_service.dart
gui/symgraph_viewer/lib/widgets/: graph_viewer.dart  legend_widget.dart
gui/symgraph_viewer/test/: widget_test.dart
misc/: LSIF.txt  SCIP.txt
scripts/: extract_lsif.ps1  extract_lsif.py
static/: index.html  scip_documents.html  scip_symbols.html
static/css/: style.css
static/js/: app.js  script.js
target-rust-analyzer/: .rustc_info.json
target-rust-analyzer/debug/.fingerprint/ahash-1fb9ebf6ded9299a/: lib-ahash  lib-ahash.json
target-rust-analyzer/debug/.fingerprint/ahash-4518be8fa4a4287e/: lib-ahash  lib-ahash.json
target-rust-analyzer/debug/.fingerprint/ahash-722b35551beb7f4d/: build-script-build-script-build  build-script-build-script-build.json
target-rust-analyzer/debug/.fingerprint/ahash-7ceb3fe1ec817c22/: run-build-script-build-script-build  run-build-script-build-script-build.json
target-rust-analyzer/debug/.fingerprint/aho-corasick-0499408aebd5bcec/: lib-aho_corasick  lib-aho_corasick.json
target-rust-analyzer/debug/.fingerprint/anstream-6e0995a9504fd47c/: lib-anstream  lib-anstream.json
target-rust-analyzer/debug/.fingerprint/anstyle-0da8b928771fdc4e/: lib-anstyle  lib-anstyle.json
target-rust-analyzer/debug/.fingerprint/anstyle-parse-a43d7ebf369e7d5e/: lib-anstyle_parse  lib-anstyle_parse.json
target-rust-analyzer/debug/.fingerprint/anyhow-d397598224a0dc06/: lib-anyhow  (+1 more)
target-rust-analyzer/flycheck0/: stderr  stdout
templates/: index.html
test_scip_project/: index.scip  test.scip  test_all.scip
tests/: test_project_detection.py
(+361 files in other folders)
