
[package]
name = "symgraph-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow     = "1"
clap       = { version = "4", features = ["derive"] }
serde_json = "1"
sled = "0.34"
walkdir = "2"

# Rust scanning prototype deps
cargo_metadata = "0.23"
tempfile = "3"

symgraph-core      = { path = "../symgraph-core" }
symgraph-discovery = { path = "../symgraph-discovery" }
symgraph-cxx       = { path = "../symgraph-cxx" }
symgraph-rust      = { path = "../symgraph-rust" }
clang = { version = "2.0", features = ["clang_10_0"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
