
[package]
name = "symgraph-cxx"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
walkdir = "2"
clang = { version = "2.0", features = ["clang_10_0"] }

# Shared models
symgraph-models = { path = "../symgraph-models" }
