[package]
name = "symgraph-scripts"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tree-sitter = "0.20"
tree-sitter-python = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-typescript = "0.20"
walkdir = "2.3"
regex = "1.0"
symgraph-core = { path = "../symgraph-core" }

[dev-dependencies]
tempfile = "3.0"